--- a/LongoToDo/LongoToDo/LongoToDo/App.xaml
+++ b/LongoToDo/LongoToDo/LongoToDo/App.xaml
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:Styles="clr-namespace:LongoToDo"
              x:Class="LongoToDo.App">
-    <Application.Resources>
-
+<Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <Styles:Colours />
+                <Styles:LabelStyles />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
