--- a/LongoToDo/LongoToDo/LongoToDo/Features/Main/MainView.xaml
+++ b/LongoToDo/LongoToDo/LongoToDo/Features/Main/MainView.xaml
@@ -7,13 +7,18 @@
     xmlns:controls="clr-namespace:LongoToDo.Controls"
     xmlns:longoToDo="clr-namespace:LongoToDo"
     BackgroundColor="{StaticResource Blanco}"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     ios:Page.UseSafeArea="true"
     x:Class="LongoToDo.Features.MainView">
+    <ContentPage.Resources>
+        <xct:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+    </ContentPage.Resources>
     <ContentPage.Content>
         <Grid>
             <StackLayout Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="20">
                 <Label Text="{longoToDo:Translate TitleToDoList}" Style="{StaticResource TitleStartBold}" Margin="20"/>
-                <CollectionView ItemsSource="{Binding ItemList}"
+                <RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}">
+                    <CollectionView ItemsSource="{Binding ItemList}"
                                 SelectionMode="Single"
                                 x:Name="collectionView">
                     <CollectionView.ItemsLayout>
@@ -56,8 +61,10 @@
                         </ContentView>
                     </CollectionView.EmptyView>
                 </CollectionView>
+                </RefreshView>
+                
                 <Frame CornerRadius="25"
-                   Padding="15"
+                   Padding="15" IsVisible="{Binding IsVisible, Converter={StaticResource InvertedBoolConverter}}"
                    Margin="0,0,15,40" BackgroundColor="{StaticResource AzulClaro}"
                    HorizontalOptions="End"
                    VerticalOptions="End">
